@@ -22,7 +22,7 @@ $(function() {
                     '<label for="oldpassword">' + _("Old Password") + '</label>',
                     '</td>',
                     '<td>',
-                    '<input id="oldpassword" data="oldpassword" class="asm-textbox" type="password" />',
+                    '<input id="oldpassword" data="oldpassword" class="asm-textbox" type="password" autocomplete="current-password"/>',
                     '</td>',
                 '</tr>',
                 '<tr>',
@@ -30,7 +30,7 @@ $(function() {
                     '<label for="newpassword">' + _("New Password") + '</label>',
                     '</td>',
                     '<td>',
-                    '<input id="newpassword" data="newpassword" class="asm-textbox" type="password" />',
+                    '<input id="newpassword" data="newpassword" class="asm-textbox" type="password" autocomplete="new-password" />',
                     '</td>',
                 '</tr>',
                 '<tr>',
@@ -38,7 +38,7 @@ $(function() {
                     '<label for="confirmpassword">' + _("Confirm Password") + '</label>',
                     '</td>',
                     '<td>',
-                    '<input id="confirmpassword" data="confirmpassword" class="asm-textbox" type="password" />',
+                    '<input id="confirmpassword" data="confirmpassword" class="asm-textbox" type="password" autocomplete="new-password" />',
                     '</td>',
                 '</tr>',
                 '</table>',
