@@ -21,7 +21,7 @@ const login = {
                 '<label for="username">' + _("Username") + '</label>',
             '</td>',
             '<td>',
-                '<input class="asm-textbox ui-widget" id="username" name="username" type="text" />',
+                '<input class="asm-textbox ui-widget" id="username" name="username" type="text" autocomplete="username" />',
             '</td>',
             '</tr>',
             '<tr>',
@@ -29,7 +29,7 @@ const login = {
                 '<label for="password">' + _("Password") + '</label>',
             '</td>',
             '<td>',
-                '<input class="asm-textbox ui-widget" id="password" name="password" type="password" />',
+                '<input class="asm-textbox ui-widget" id="password" name="password" type="password" autocomplete="current-password" />',
             '</td>',
             '</tr>',
             '</table>',
